Read events from env vars

--- a/.github/workflows/notifier.yml
+++ b/.github/workflows/notifier.yml
@@ -6,28 +6,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    strategy:
-     matrix:
-      python-version: [3.5, 3.6, 3.7, 3.8]
-    
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.8
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flake8
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run Notifier
-        env: 
+        env:
           API_KEY: ${{secrets.API_KEY}}
           API_SECRET: ${{secrets.API_SECRET}}
           FROM_EMAIL: ${{secrets.FROM_EMAIL}}
           TO_EMAIL: ${{secrets.TO_EMAIL}}
           SENDER_NAME: ${{secrets.SENDER_NAME}}
           RECIEVER_NAME: ${{secrets.RECIEVER_NAME}}
-        run: cd src && python event_notifier.py  
+          EVENTS: ${{secrets.EVENTS}}
+        run: python src/event_notifier.py
