--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 certifi==2020.6.20
 chardet==3.0.4
+json2html==1.3.0
 mailjet-rest==1.3.4
 urllib3==1.25.11; python_version >= "2.7" and python_version not in "3.0, 3.1, 3.2, 3.3, 3.4" and python_version < "4"
